removed my shells from the default config file

--- a/Smassh/cfg.plist
+++ b/Smassh/cfg.plist
@@ -2,24 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>script</key><string>tell application "Terminal"
+	<key>script</key>
+	<string>tell application &quot;Terminal&quot;
 	activate
-	do script with command "ssh %@"
+	do script with command &quot;ssh %@&quot;
 end tell</string>
-  <key>shells</key>
-  <array>
-    <dict>
-      <key>nick</key><string>bloodsword</string>
-      <key>user</key><string>perkee</string>
-      <key>host</key><string>bloodsword.local</string>
-      <key>init</key><string>cat lazerswords.txt</string>
-    </dict>
-    <dict>
-      <key>nick</key><string>Claymore</string>
-      <key>user</key><string>aperkins</string>
-      <key>host</key><string>claymore.local</string>
-      <key>init</key><string>ping 8.8.8.8</string>
-    </dict>
-  </array>
+	<key>shells</key>
+	<array/>
 </dict>
 </plist>
